--- a/src/Pages/style.css
+++ b/src/Pages/style.css
@@ -374,12 +374,28 @@ p {
 }
 #projects .project-info p {
 	color: white;
+
 }
+
+#projects .project-info h1 a {
+	color: white;
+	margin-left: 20px;
+	
+}
+
+#projects .project-info h1 a:hover {
+	color: rgb(254, 254, 254);
+	
+	
+}
+
+
 #projects .project-img {
 	flex-basis: 50%;
 	height: 300px;
 	overflow: hidden;
 	position: relative;
+	cursor: pointer;
 }
 #projects .project-img:after {
 	content: '';
